--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Presentación LUCIA</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -28,43 +28,43 @@
             <div class="container-carousel">
                 <div class="carruseles" id="slider">
                     <section class="slider-section">
-                        <img src="/public/sources/section1/1.jpg" alt="">
+                        <img src="./public/sources/section1/1.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i1.jpg" alt="">
+                        <img src="./public/intro/i1.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i2.jpg" alt="">
+                        <img src="./public/intro/i2.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i3.jpg" alt="">
+                        <img src="./public/intro/i3.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i4.jpg" alt="">
+                        <img src="./public/intro/i4.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i5.jpg" alt="">
+                        <img src="./public/intro/i5.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i6.jpg" alt="">
+                        <img src="./public/intro/i6.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i7.jpg" alt="">
+                        <img src="./public/intro/i7.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i8.jpg" alt="">
+                        <img src="./public/intro/i8.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i9.jpg" alt="">
+                        <img src="./public/intro/i9.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/i10.jpg" alt="">
+                        <img src="./public/intro/i10.jpg" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/empresaIA.gif" alt="">
+                        <img src="./public/intro/empresaIA.gif" alt="">
                     </section>
                     <section class="slider-section">
-                        <img src="/public/intro/asistente.gif" alt="">
+                        <img src="./public/intro/asistente.gif" alt="">
                     </section>
                 </div>
                 <div class="btn-left"><i class='bx bx-chevron-left'></i></div>
@@ -74,61 +74,61 @@
         <section class="slide" id="slide3">
             <h2>3</h2>
             <section class="imagenes">
-                <img src="/public/sources/g1.jpg" alt="">
+                <img src="./public/sources/g1.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide4">
             <h2>4</h2>
             <section class="imagenes">
-                <img src="/public/sources/g2.jpg" alt="">
+                <img src="./public/sources/g2.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide5">
             <h2>5</h2>
             <section class="imagenes">
-                <img src="/public/sources/g3.jpg" alt="">
+                <img src="./public/sources/g3.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide6">
             <h2>6</h2>
             <section class="imagenes">
-                <img src="/public/sources/g4.jpg" alt="">
+                <img src="./public/sources/g4.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide7">
             <h2>7</h2>
             <section class="imagenes">
-                <img src="/public/sources/g5.jpg" alt="">
+                <img src="./public/sources/g5.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide8">
             <h2>8</h2>
             <section class="imagenes">
-                <img src="/public/sources/g6.jpg" alt="">
+                <img src="./public/sources/g6.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide9">
             <h2>9</h2>
             <section class="imagenes">
-                <img src="/public/sources/g7.jpg" alt="">
+                <img src="./public/sources/g7.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide10">
             <h2>10</h2>
             <section class="imagenes">
-                <img src="/public/sources/g8.jpg" alt="">
+                <img src="./public/sources/g8.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide11">
             <h2>11</h2>
             <section class="imagenes">
-                <img src="/public/sources/g10.jpg" alt="">
+                <img src="./public/sources/g10.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide12">
             <h2>12</h2>
             <section class="imagenes">
-                <img src="/public/sources/g9.jpg" alt="">
+                <img src="./public/sources/g9.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide13">
@@ -140,9 +140,9 @@
     <button id="prev" aria-label="Previous slide">&#10094;</button>
     <button id="next" aria-label="Next slide">&#10095;</button>
 
-    <script src="/js/particles.min.js"></script>
-    <script src="/js/config.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="./js/particles.min.js"></script>
+    <script src="./js/config.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
