--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <p>Autores: Yarima Karina Galviz Sánchez, Angel David Argumedo Guerra, Stefany Mogrovejo Madrid.</p>
             <p>Tutora: Estrella Camacho Alvis.</p>
             <div class="gallery">
-                <img src="public/yarima.jpg" alt="Yarima Karina Galviz Sánchez">
-                <img src="public/angel.jpg" alt="Angel David Argumedo Guerra">
-                <img src="public/stefany.jpg" alt="Stefany Mogrovejo Madrid">
-                <img src="public/estrella.jpg" alt="Estrella Camacho Alvis">
+                <img src="./public/yarima.jpg" alt="Yarima Karina Galviz Sánchez">
+                <img src="./public/angel.jpg" alt="Angel David Argumedo Guerra">
+                <img src="./public/stefany.jpg" alt="Stefany Mogrovejo Madrid">
+                <img src="./public/estrella.jpg" alt="Estrella Camacho Alvis">
         </section>
         <section class="slide" id="slide2">
             <h2>2</h2>
