--- a/index.html
+++ b/index.html
@@ -103,30 +103,64 @@
         </section>
         <section class="slide" id="slide8">
             <h2>8</h2>
-            <section class="imagenes">
-                <img src="./public/sources/g6.jpg" alt="">
-            </section>
+            <p>Estudio de campo</p>
+            <div class="container-carousel2">
+                <div class="carruseles2" id="slider2">
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e1.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e2.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e3.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e4.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e5.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e6.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e7.jpg" alt="">
+                    </section>
+                    <section class="slider-section2">
+                        <img src="./public/estudio/e8.jpg" alt="">
+                    </section>
+                </div>
+                <div class="btn-left2"><i class='bx bx-chevron-left'></i></div>
+                <div class="btn-right2"><i class='bx bx-chevron-right'></i></div>
+            </div>
         </section>
         <section class="slide" id="slide9">
             <h2>9</h2>
             <section class="imagenes">
-                <img src="./public/sources/g7.jpg" alt="">
+                <img src="./public/sources/g6.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide10">
             <h2>10</h2>
             <section class="imagenes">
-                <img src="./public/sources/g8.jpg" alt="">
+                <img src="./public/sources/g7.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide11">
             <h2>11</h2>
             <section class="imagenes">
-                <img src="./public/sources/g10.jpg" alt="">
+                <img src="./public/sources/g8.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide12">
             <h2>12</h2>
+            <section class="imagenes">
+                <img src="./public/sources/g10.jpg" alt="">
+            </section>
+        </section>
+        <section class="slide" id="slide13">
+            <h2>13</h2>
             <section class="imagenes">
                 <img src="./public/sources/g9.jpg" alt="">
             </section>
