--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Presentación LUCIA</title>
+    <link rel="icon" href="./public/4616821.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
