--- a/index.html
+++ b/index.html
@@ -138,35 +138,63 @@
         </section>
         <section class="slide" id="slide9">
             <h2>9</h2>
+            <p>Hablemos de dinero</p>
             <section class="imagenes">
-                <img src="./public/sources/g6.jpg" alt="">
+                <img src="./public/sources/es1.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide10">
             <h2>10</h2>
+            <p>Hablemos de dinero</p>
             <section class="imagenes">
-                <img src="./public/sources/g7.jpg" alt="">
+                <img src="./public/sources/es2.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide11">
             <h2>11</h2>
+            <p>Hablemos de dinero</p>
             <section class="imagenes">
-                <img src="./public/sources/g8.jpg" alt="">
+                <img src="./public/sources/es3.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide12">
             <h2>12</h2>
+            <p>Hablemos de dinero</p>
             <section class="imagenes">
-                <img src="./public/sources/g10.jpg" alt="">
+                <img src="./public/sources/es4.jpg" alt="">
             </section>
         </section>
         <section class="slide" id="slide13">
             <h2>13</h2>
             <section class="imagenes">
+                <img src="./public/sources/g6.jpg" alt="">
+            </section>
+        </section>
+        <section class="slide" id="slide14">
+            <h2>14</h2>
+            <section class="imagenes">
+                <img src="./public/sources/g7.jpg" alt="">
+            </section>
+        </section>
+        <section class="slide" id="slide15">
+            <h2>15</h2>
+            <section class="imagenes">
+                <img src="./public/sources/g8.jpg" alt="">
+            </section>
+        </section>
+        <section class="slide" id="slide16">
+            <h2>16</h2>
+            <section class="imagenes">
+                <img src="./public/sources/g10.jpg" alt="">
+            </section>
+        </section>
+        <section class="slide" id="slide17">
+            <h2>17</h2>
+            <section class="imagenes">
                 <img src="./public/sources/g9.jpg" alt="">
             </section>
         </section>
-        <section class="slide" id="slide13">
+        <section class="slide" id="slide18">
             <h1>GRACIAS!!!</h1>
         </section>
         <!-- Añadir más secciones para cada parte del contenido -->
